--- a/Tools/GoldParser/GoldParser.csproj
+++ b/Tools/GoldParser/GoldParser.csproj
@@ -12,6 +12,7 @@
     <AssemblyName>GoldParser</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkSubset>Client</TargetFrameworkSubset>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
