--- a/Tools/Xpidl.Formatter/Xpidl.Formatter.csproj
+++ b/Tools/Xpidl.Formatter/Xpidl.Formatter.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{49E61E05-1B2E-42CF-B50B-8DBB9742EFA1}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <ProjectGuid>{C9B3F90A-2B02-4228-AED7-E6552EEDFE25}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Xpidl</RootNamespace>
-    <AssemblyName>Xpidl</AssemblyName>
+    <RootNamespace>Xpidl.Formatter</RootNamespace>
+    <AssemblyName>Xpidl.Formatter</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkSubset>Client</TargetFrameworkSubset>
@@ -42,49 +42,16 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MainForm.Designer.cs">
-      <DependentUpon>MainForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="CodeDom\CodeDomExtensions.cs" />
+    <Compile Include="CodeDom\CodeDomXpidlFormatter.cs" />
+    <Compile Include="CodeDom\CodeDomXpidlFormatter.Transform.cs" />
+    <Compile Include="IXpidlFormatter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="MainForm.resx">
-      <DependentUpon>MainForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <EmbeddedResource Include="Properties\xpidl.cgt" />
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Xpidl.Formatter\Xpidl.Formatter.csproj">
-      <Project>{C9B3F90A-2B02-4228-AED7-E6552EEDFE25}</Project>
-      <Name>Xpidl.Formatter</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Xpidl.Parser\Xpidl.Parser.csproj">
       <Project>{52638738-9620-449F-B374-3017501B7F10}</Project>
       <Name>Xpidl.Parser</Name>
