--- a/Gecko/DotGecko.Gecko/DotGecko.Gecko.csproj
+++ b/Gecko/DotGecko.Gecko/DotGecko.Gecko.csproj
@@ -39,6 +39,7 @@
     <Compile Include="ClipboardCommands.cs" />
     <Compile Include="ContextMenuEventArgs.cs" />
     <Compile Include="CreateWindowEventArgs.cs" />
+    <Compile Include="CssColorFormatInfo.cs" />
     <Compile Include="Dom\DomAttribute.cs" />
     <Compile Include="Dom\DomBarProp.cs" />
     <Compile Include="Dom\DomCDataSection.cs" />
@@ -66,6 +67,10 @@
     <Compile Include="Dom\DomText.cs" />
     <Compile Include="Dom\DomWindow.cs" />
     <Compile Include="Dom\DomWindowCollection.cs" />
+    <Compile Include="DownloadManager.cs" />
+    <Compile Include="DownloadManager.Download.cs">
+      <DependentUpon>DownloadManager.cs</DependentUpon>
+    </Compile>
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="FilePickerEventArgs.cs" />
     <Compile Include="Interop\ExtensionMethods.cs" />
@@ -199,7 +204,6 @@
     <Compile Include="Interop\nsIXULWindow.cs" />
     <Compile Include="Interop\nsResult.cs" />
     <Compile Include="Interop\SimpleEnumerator.cs" />
-    <Compile Include="Interop\SnapshotCapture.cs" />
     <Compile Include="Interop\Xpcom.Api.cs" />
     <Compile Include="Interop\Xpcom.Api.Strings.cs" />
     <Compile Include="Interop\Xpcom.cs" />
@@ -213,11 +217,14 @@
     <Compile Include="Interop\XpcomString.cs" />
     <Compile Include="Interop\XpcomStringMarshalers.cs" />
     <Compile Include="LoadFlags.cs" />
+    <Compile Include="PreferencesBranch.cs" />
+    <Compile Include="PreferencesService.cs" />
     <Compile Include="PromptAppLaunchEventArgs.cs" />
     <Compile Include="PromptEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProvideTooltipTextEventArgs.cs" />
     <Compile Include="ProvideWindowEventArgs.cs" />
+    <Compile Include="SnapshotCapture.cs" />
     <Compile Include="StopFlags.cs" />
     <Compile Include="TooltipEventArgs.cs" />
     <Compile Include="WebBrowser.EmbeddingSiteWindow.cs">
