--- a/Gecko/DotGecko.Gecko/DotGecko.Gecko.csproj
+++ b/Gecko/DotGecko.Gecko/DotGecko.Gecko.csproj
@@ -32,6 +32,15 @@
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <DelaySign>true</DelaySign>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>..\DotGecko.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="AppFileLocation.cs" />
     <Compile Include="BrowserChromeEventArgs.cs" />
