--- a/Gecko/DotGecko.Gecko.Tests/DotGecko.Gecko.Tests.csproj
+++ b/Gecko/DotGecko.Gecko.Tests/DotGecko.Gecko.Tests.csproj
@@ -57,6 +57,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DeclarationsTest.cs" />
     <Compile Include="EventHandlersTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XpcomTest.cs" />
