--- a/Gecko/DotGecko.Gecko.Interop/DotGecko.Gecko.Interop.csproj
+++ b/Gecko/DotGecko.Gecko.Interop/DotGecko.Gecko.Interop.csproj
@@ -489,6 +489,12 @@
   <ItemGroup>
     <Compile Include="nsIDOMValidityState.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="nsIAnimationFrameListener.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="nsICycleCollectorListener.cs" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
