--- a/Gecko/DotGecko.Gecko.Interop/DotGecko.Gecko.Interop.csproj
+++ b/Gecko/DotGecko.Gecko.Interop/DotGecko.Gecko.Interop.csproj
@@ -494,6 +494,9 @@
   <ItemGroup>
     <Compile Include="nsICycleCollectorListener.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="nsIContentSecurityPolicy.cs" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
