Fixed declaration of JsVal and JsId types;

--- a/Gecko/DotGecko.Gecko.Interop/DotGecko.Gecko.Interop.csproj
+++ b/Gecko/DotGecko.Gecko.Interop/DotGecko.Gecko.Interop.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="JavaScript\JsId.cs" />
+    <Compile Include="JavaScript\JsVal.cs" />
     <Compile Include="JavaScript\MozJS.cs" />
     <Compile Include="nsIAppShell.cs" />
     <Compile Include="nsIArray.cs" />
